Finish about the method

--- a/application.html
+++ b/application.html
@@ -144,51 +144,48 @@
                     <hr>
                   </div>
 
+
                   </div>
-                  <div class="section-inside-picture meditation-picture">
+                  <div class="section-inside-picture application-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>A Means For Entering Our Inner Experiences</h1>
-                  <h6>A Different Form of Meditation</h6>
+                  <h1>Applications</h1>
+                  <h6>Personal Growth</h6>
                   <p>
-                    The Entrance Meditation process is different from many other forms of meditation.
-                    It focuses on providing an effective process to stimulate our inner experiences rather than on the content of the meditation.
-                     No attempt is made to control or influence the images that present themselves to the meditator; the images come only from the individual.
+                    By working at an inner level, individuals develop the various aspects of their lives such as personal relationships, career decisions and difficult situations.
                   </p>
 
-                  <h6>Entering the Realm of Quietness </h6>
+                  <h6>Health </h6>
                   <p>
-                    The meditations provide a means of entering the realm of quietness in which inner experiences can take place.
-                    By creating a contemplative atmosphere, they provide a neutral starting point from which we can gain access to our depths.
-                    Our energies move inward, our intellectual mind is calmed, and our breathing becomes slower and softer as we are absorbed in the stillness.
+                    Quiet and relax the mind and body to minimize stress and act as a preventive health measure. Become more focused to deal with physical and mental needs.
                   </p>
 
-                  <h6>Accessing Our Inner Resources</h6>
+                  <h6>Addiction Control</h6>
                   <p>
-                     Once the meditations carry us to that place in the depths of ourselves, it frees us to follow our own rhythms of inner experience.
-                      We can explore the symbolic and spiritual aspects of our lives, our intuitions, direct perceptions and sensations of all kinds.
-                      Images and feelings rise up to us from our depths.
-                      The meditations enhance our perception of events, enabling us to discover truths about life.
+                    Overcoming an addiction, whether it is related to drugs, alcohol, or eating, is facilitated by the Entrance Meditation process as a means to get in touch with feelings and thoughts.
                   </p>
 
-                  <h6>Stimulating the Creative Processes</h6>
+                  <h6>Religious Leaders</h6>
                   <p>
-                     By making contact with our dreams and other images through the Entrance Meditation experience, we develop further inner experiences as one leads to another.
-                     This development grants new insights that were previously unattainable.
-                     Through this process, we become more creative and develop more fullfilling lives.
+                    Integrating the meditations into religious services deepens the experience of the congregation.
                   </p>
-                  <h6>Strengthening Our Spiritual Experiences</h6>
+                  <h6>Counselors/Therapists</h6>
                   <p>
-                     The many different types of spiritual experience are enhanced through the Entrance Meditation process.
-                      Because these experiences spring from our depths, focusing upon these experiences through the meditations leads to deeper and more profound awarenesses.
+                    By establishing a quiet, contemplative atmosphere, clients can get in touch with their inner feelings and articulate them more clearly.
                   </p>
-                  <h6>Neutral Means for People With Varied Needs</h6>
+                  <h6>Educators</h6>
                   <p>
-                  The meditations establish an open atmosphere through the use of symbols that are neutral in character and are not tied to any doctrine or belief.
-                   Rather, these symbols lead one closer to fundamental truths of human existence through one's own particular inner experience.
-                    They are a means by which individuals can reach their own contact with truths in terms of their own traditions and consciousness.
-                     The neutrality of the process has allowed many to benefit greatly who would normally be skeptical of such a practice.
+                    The Entrance Mediation process is used in many different areas of education. Instructors utilize the meditations to open students to the truths contained in the lesson and to tap sources of creativity.
+                  </p>
+                  <h6>Creative Writers and Artists</h6>
+                  <p>
+                  Tapping into their inner processes through the unconscious stream of images, Entrance Meditation readings help writers and artists activate their imagination and thus produce the materials for their creative work.
+                  </p>
+                  <h6>Intensive Journal Process</h6>
+                  <p>
+                  The Entrance Meditation experience is integral to the Intensive Journal process.
+                   After entering our inner space through the Entrance Meditation process, we record our images in the Intensive Journal workbook. Stimulating our inner processes, we continue with the meditations and proceed to progressively deeper levels in our Journal work.
                   </p>
 
 
