--- a/samplereading.html
+++ b/samplereading.html
@@ -145,56 +145,124 @@
                   </div>
 
                   </div>
-                  <div class="section-inside-picture meditation-picture">
+                  <div class="section-inside-picture sample-picture">
                   </div>
 
-                <div class="section-inside-content">
-                  <h1>A Means For Entering Our Inner Experiences</h1>
-                  <h6>A Different Form of Meditation</h6>
-                  <p>
-                    The Entrance Meditation process is different from many other forms of meditation.
-                    It focuses on providing an effective process to stimulate our inner experiences rather than on the content of the meditation.
-                     No attempt is made to control or influence the images that present themselves to the meditator; the images come only from the individual.
+                <div class="section-inside-content samplereading">
+                  <h1>A Sample Entrance Meditation&trade; Reading:</h1>
+                  <h6>
+                    Muddy/Clear: The Mirror of the Water<br>
+                    From the The Well and the Cathedral: An Entrance Meditation Reading,<br>
+by Ira Progoff, Ph.D.
+
+                  </h6>
+
+                  <div class="para-sample">
+                    <ol>
+               <p>  <li>
+                    I remember the saying<br>
+                      Of the old wise man, Lao Tse:<br>
+                      "Muddy water,<br>
+                      Let stand<br>
+                      Becomes clear."</li>
                   </p>
 
-                  <h6>Entering the Realm of Quietness </h6>
-                  <p>
-                    The meditations provide a means of entering the realm of quietness in which inner experiences can take place.
-                    By creating a contemplative atmosphere, they provide a neutral starting point from which we can gain access to our depths.
-                    Our energies move inward, our intellectual mind is calmed, and our breathing becomes slower and softer as we are absorbed in the stillness.
+                  <p><li>
+                    Thinking of that,<br>
+  I look within myself.<br>
+  I see,<br>
+  On the screen of my mind's eye,<br>
+  A stream of water,<br>
+  Moving,<br>
+  Swirling,<br>
+  Murky,<br>
+  It is full of things.<br>
+  I cannot look into this water.<br>
+  I cannot see my reflection<br>
+  In this water.
+</li>  </p>
+
+                  <p><li>
+                    Now the movement stops.<br>
+    The water is in one place.<br>
+    It is heavy colored,<br>
+    Muddy<br>
+    But it is becoming quiet,<br>
+    The water is at rest<br>
+    In its stillness<br>
+    The muddiness<br>
+    Is settling to the bottom.
+  </li>  </p>
+
+                  <p><li>
+                    At the surface it becomes clear,<br>
+    Transparent.<br>
+    I can see into the water<br>
+    More and more.<br>
+    Now I can see through<br>
+    To the very depth of it.<br>
+    There it shines<br>
+    And it reflects.<br>
+  </li></p>
+                  <p><li>
+                    The heavens are reflected<br>
+  In the quiet water.<br>
+  It is clear.<br>
+  I see the reflection of a tree<br>
+  In the quiet water.<br>
+  The muddy water<br>
+  Has become clear.</li>
+</p>
+                  <p><li>
+                    As I continue to look<br>
+  Into the stillness<br>
+  A reflection of myself<br>
+  Begins to appear.<br>
+  Deep in the quietness<br>
+  Of the water,<br>
+  I see<br>
+  A reflection of myself,<br>
+  Myself<br>
+  In many different forms.</li>
+</p>
+                  <p><li>
+                    I sit<br>
+                    In the stillness<br>
+                    And let the image shape itself.<br>
+                    It becomes many things.<br>
+                    Many images<br>
+                    Appear in the still water,<br>
+                    Many things<br>
+                    Come up for me to see.</li>
                   </p>
-
-                  <h6>Accessing Our Inner Resources</h6>
-                  <p>
-                     Once the meditations carry us to that place in the depths of ourselves, it frees us to follow our own rhythms of inner experience.
-                      We can explore the symbolic and spiritual aspects of our lives, our intuitions, direct perceptions and sensations of all kinds.
-                      Images and feelings rise up to us from our depths.
-                      The meditations enhance our perception of events, enabling us to discover truths about life.
+                  <p><li>
+                    In the depth of the water,<br>
+  The images<br>
+  That open the greatest vision<br>
+  Within me<br>
+  Are not those that are visible.<br>
+  I do not see them;<br>
+  I just know them.<br>
+  Something within me<br>
+  Recognizes them<br>
+  In the still water.</li>
                   </p>
-
-                  <h6>Stimulating the Creative Processes</h6>
-                  <p>
-                     By making contact with our dreams and other images through the Entrance Meditation experience, we develop further inner experiences as one leads to another.
-                     This development grants new insights that were previously unattainable.
-                     Through this process, we become more creative and develop more fullfilling lives.
+                  <p><li>
+                    The muddy water has become quiet.<br>
+                    I sit gazing into it,<br>
+                    Seeing images,<br>
+                    Visible and invisible,<br>
+                    Letting them take form,<br>
+                    Letting them change<br>
+                    And re-form themselves<br>
+                    In the depth of the still water,<br>
+                    In the mirror of the water,<br>
+                    In the depth of my Self,<br>
+                    Moving, moving,<br>
+                    In the Silence ... In the Silence.</li>
                   </p>
-                  <h6>Strengthening Our Spiritual Experiences</h6>
-                  <p>
-                     The many different types of spiritual experience are enhanced through the Entrance Meditation process.
-                      Because these experiences spring from our depths, focusing upon these experiences through the meditations leads to deeper and more profound awarenesses.
-                  </p>
-                  <h6>Neutral Means for People With Varied Needs</h6>
-                  <p>
-                  The meditations establish an open atmosphere through the use of symbols that are neutral in character and are not tied to any doctrine or belief.
-                   Rather, these symbols lead one closer to fundamental truths of human existence through one's own particular inner experience.
-                    They are a means by which individuals can reach their own contact with truths in terms of their own traditions and consciousness.
-                     The neutrality of the process has allowed many to benefit greatly who would normally be skeptical of such a practice.
-                  </p>
-
-
-
-
-
+                </ol>
+                </div>
 
                 </div>
 
