--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">General Workshops</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">About the Workshops</a></li>
+                            <li><a href="workshop.html">About the Workshops</a></li>
                             <li><a href="#">Schedules and Locations</a></li>
-                            <li><a href="#">Start a Workshop</a></li>
+                            <li><a href="start.html">Start a Workshop</a></li>
                         </ul>
                     </li>
                     <li class="navigation__item">
@@ -194,7 +194,7 @@
                         </div>
                     </div>
 
-                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                    <a href="reasons.html" class="btn-text">Learn more &rarr;</a>
 
                 </section>
 
