--- a/meditation.html
+++ b/meditation.html
@@ -71,9 +71,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">General Workshops</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">About the Workshops</a></li>
+                            <li><a href="workshop.html">About the Workshops</a></li>
                             <li><a href="#">Schedules and Locations</a></li>
-                            <li><a href="#">Start a Workshop</a></li>
+                            <li><a href="start.html">Start a Workshop</a></li>
                         </ul>
                     </li>
                     <li class="navigation__item">
@@ -127,7 +127,7 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Entrance Meditation</h5>
+                    <h5 class="heading-five">About the method &mdash; Entrance Meditation</h5>
                     <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
