--- a/navigation.html
+++ b/navigation.html
@@ -52,9 +52,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">General Workshops</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">About the Workshops</a></li>
+                            <li><a href="workshop.html">About the Workshops</a></li>
                             <li><a href="#">Schedules and Locations</a></li>
-                            <li><a href="#">Start a Workshop</a></li>
+                            <li><a href="start.html">Start a Workshop</a></li>
                         </ul>
                     </li>
                     <li class="navigation__item">
