--- a/faqs.html
+++ b/faqs.html
@@ -128,91 +128,123 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About the method</h5>
-                    <h1 class="heading-one hr-overview">Workbook</h1>
+                    <h5 class="heading-five">General Workshops &mdash; Workshop Modules</h5>
+                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+
+                    <div class="inside-nav-container">
+                      <hr class="mod-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="modules.html">Life Context</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="depthcontext.html">Depth Context</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="l-integration.html">Life Integration</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="l-experience.html">Life Experience</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="lifestudy.html">Life Study</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="faqs.html">Frequently Asked Questions (FAQs)</a></li>
+
+                    </ul>
+                    <hr class="mod-hr">
                   </div>
-                  <div class="section-inside-picture workbook-picture">
+
+                  </div>
+                  <div class="section-inside-picture faqs-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1> The Intensive Journal Workbook </h1>
+                  <!-- <h1>About the Intensive Journal Program Modules</h1> -->
+                  <h1>Frequently Asked Questions About Intensive Journal Modules</h1>
+                  <!-- <h6>Frequently Asked Questions About Intensive Journal Modules</h6> -->
 
-                  <p>
-                    The Intensive Journal workbook is the basic instrument in which you write about your life.
-                    It is a three ring binder containing tabs, each of which covers a specific area of your life.
-                     Examples include personal relationships, career and special interests, body and health, events, dreams, and meaning in life.
-                  </p>
 
-                  <p>
-                    The structure of the sections and corresponding writing exercises in the workbook mirror the subjective process of perceptions and thoughts taking place inside you.
-                    For example, Progoff believed that the way to work with dreams and other forms of imagery is through an unfolding process, rather than analyzing or interpreting them, and this unfolding process is implemented in the exercises pertaining to dreams in the workbook.
-                  </p>
-                  <p>
-                    Therefore, the structure avoids the problems of unstructured journals that tend to diminish and eventually neutralize themselves, and result in analytical and circular forms of thinking.
-                    The structure also makes possible the Journal Feedback process which you will learn about shortly.
-                  </p>
+                  <div class="hidepara">
+                                      <label for="question01">
+                                        <h6>
+                                    Why do people repeat a workshop module?
+                                       </h6>
+                                     </label>
+                                     <input type="checkbox" name="one" id="question01">
+                  <div class="hide">
+                    <div class="innerpara">
+                                    <p>
+                                     Participants return to our workshops for many reasons:
+                                      to devote a weekend for personal growth, the power of the group atmosphere, the discipline of a workshop, and guidance from a certified leader.
+                                    </p>
+                                    <p>
+                                     By repeating a workshop module, many people find that they deepen their knowledge of the method.
+                                      Using the Intensive Journal method is an acquired skill that is developed over time.
+                                     There are also benefits that are generated from cumulative use of the method over time.
+                                    </p>
+                                    <p>
+                              Attending another workshop will allow you to take stock of how your life has changed as well as your perspective about it.
+                              Therefore, the content of your writing may be surprisingly different and lead to new awareness and possibilities.
+                                    </p>
+                                    <p>
+                              Dr. Progoff believed that a key factor for individual growth is working in the workshop atmosphere and not the specific module that a participant is taking.
+                               Therefore, he urged people to focus on enrolling in a program that fit their schedule even though they may have attended that module previously.
+                                    </p>
+                                    <p>
+                                      Some people find that they do not use the broad scope of exercises on their own. To benefit more fully from the method, it is important to use many of the exercises.
+                                      A workshop experience provides you with the discipline to work in each of the exercises.
+                                    </p>
+                                      </div>
+                                    </div>
+                                    </div>
+                  <div class="hidepara">
+                                      <label for="question02">
+                                        <h6>
+                                    What are the benefits of an extended workshop series?
+                                       </h6>
+                                     </label>
+                                     <input type="checkbox" name="one" id="question02">
+                  <div class="hide">
+                    <div class="innerpara">
+                                    <p>
+                                     We offer back-to-back workshops in a continuous setting.
+                                      They provide an opportunity to immerse yourself more deeply in the method and to develop a momentum and continuity from which you can generate creative breakthroughs.
+                                       Back-to-back workshops provide a more cost-effective way to experience the three core modules and minimize travel expense, especially for those who have to travel a long distance.
+                                        Most of the Life Integration workshops, a key component of the method, are offered at these extended programs.
+                                    </p>
+                                    <p>
+                                   Extended programs are offered throughout the year although many occur in the spring and summer seasons.
+                                   In most cases, each module is 12 hours in length and is covered over two days.
+                                   We typically segment the 5-6 day program into the three modules so that you can select the appropriate length of your stay. Many people attend all three modules.
+                                    </p>
+                                    <p>
+                              In many cases, you can choose to either reside at the center or commute.
+                               Staying at the center allows you to focus on the program without the distractions of returning to your daily living.
+                                    </p>
+                                      </div>
+                                    </div>
+                                    </div>
+                  <div class="hidepara">
+                                      <label for="question03">
+                                        <h6>
+                                  What are the differences between workshop modules of various lengths?
+                                       </h6>
+                                     </label>
+                                     <input type="checkbox" name="one" id="question03">
+                  <div class="hide">
+                    <div class="innerpara">
 
-                  <h6>Active Instrument</h6>
+                                    <p>
+                                In most cases, Intensive Journal workshops are offered in the standard full-length format of 12 hours.
+                                The 12 hour format covers all of the Intensive Journal sections that are intended for that module.
+                                The pace of the workshop is sufficiently in-depth to allow for adequate time for working in each exercise.
+                                Shorter versions (primarily the 10 hour length) devote less time to many of the exercises.
+                                They are designed to meet your time and budget constraints.
+                                    </p>
 
-                  <p>
-                    The structure of the Intensive Journal workbook is an active instrument. Each exercise is used with specific procedures that seek to evoke the contents of a persons’s life without engaging in conscious thought processes.
-                     Drawing forth your life process stimulates additional inner perceptions and movements.
-                     Through the relation of the sections to each other, an inner dynamic is built moving in two directions: outward and inward.
-                  </p>
-
-                  <p>
-                    Progoff emphasizes the difference between the Intensive Journal method and diary writing:
-<blockquote>
-“Diary writing usually involves the unstructured, chronological recording of the events of a person’s life....the mere fact of continuously writing entries...is not sufficient in itself to bring about deep changes in a person’s life.
-To achieve a significant transformation in a personality, strong forces of energy must be generated.” </blockquote>
-                  </p>
-
-                  <h6>Tangible procedures</h6>
-
-                  <p>
-                    Working with our emotions and experiences may seem challenging and elusive; where do we begin?
-                     How do we get a handle on them? Progoff describes them to be amorphous, like smoke.
-                     Using the Intensive Journal procedures step-by-step helps you access the feelings and experiences that make you unique.
-
-                     <blockquote>
-                       “People become sensitive to the elusive threads of their inner lives when they have a definite way of working with them.”
-                      </blockquote>
-
-                  </p>
-
-                  <h6>Unifying Process</h6>
-
-                  <p>
-                    The workbook serves a unifying process; it is the link that holds your life process together, where your life experiences are recorded.
-                     Progoff calls it the “hinge in the process,” the tool by which you re-experience the inner continuity of your life. You can feel the presence of the principles of wholeness working within you.
-
-                  </p>
-                  <p>
-                    The workbook embodies the continuity of development through all of the moments of frustration, insights, exaltation and especially during periods of transition.
-                    You can be totally honest with the Intensive Journal workbook, your most accepting friend through your life journey.
-                  </p>
-
-                  <h6>Writing Process</h6>
-
-                  <p>
-                    The process of writing is necessary to make your feelings and experiences tangible for further development.
-                    As you read back what you have written, you may be surprised but there it is before you.
-                     The fact that you wrote the content can be significant; you own it - it is you.
-                  </p>
-                  <p>
-                    The process of writing in the Intensive Journal workbook stimulates movement within yourself.
-                    You are no longer carrying around these thoughts in your head.
-                     You have taken the next step by recording them for further development.
-                  </p>
-                  <p>
-                    You do not have to like to write or be a good writer.
-                    No one is reading what you write except you.
-                    You are not writing your life story but rather engaging in the unfolding process of working with your unique set of experiences and emotions that embody you.
-                  </p>
+                                      </div>
+                                    </div>
+                                    </div>
 
 
                 </div>
-
 
                 </section>
 
@@ -286,10 +318,7 @@ To achieve a significant transformation in a personality, strong forces of energ
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
