--- a/l-experience.html
+++ b/l-experience.html
@@ -128,91 +128,51 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About the method</h5>
-                    <h1 class="heading-one hr-overview">Workbook</h1>
+                    <h5 class="heading-five">General Workshops &mdash; Workshop Modules</h5>
+                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
+
+                    <div class="inside-nav-container">
+                      <hr class="mod-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="modules.html">Life Context</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="depthcontext.html">Depth Context</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="l-integration.html">Life Integration</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="l-experience.html">Life Experience</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="lifestudy.html">Life Study</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="faqs.html">Frequently Asked Questions (FAQs)</a></li>
+
+                    </ul>
+                    <hr class="mod-hr">
                   </div>
-                  <div class="section-inside-picture workbook-picture">
+
+                  </div>
+                  <div class="section-inside-picture l-experience-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1> The Intensive Journal Workbook </h1>
-
+                  <h1>About the Intensive Journal Program Modules</h1>
+                  <h6>Life Experience (LE) Workshop: <span><em>An extended introductory workshop (15 hours)</em></span></h6>
                   <p>
-                    The Intensive Journal workbook is the basic instrument in which you write about your life.
-                    It is a three ring binder containing tabs, each of which covers a specific area of your life.
-                     Examples include personal relationships, career and special interests, body and health, events, dreams, and meaning in life.
+                   This workshop covers the Life Context workshop and some of the exercises in the Depth Contact workshop.
+                   This module was originally offered since many people found the Life Context (Part 1) workshop helpful but did not return for the Depth Contact (Part 2) workshop due to their busy schedule.
+                   Few Life Experience workshops are offered since it covers a great deal of information in one workshop.
+                  </p>
+                  <p>
+                  We prefer to offer the sequence of Life Context and Depth Contact modules versus the Life Experience module since they cover all of the Intensive Journal exercises in a more thorough and in-depth way.
+                   To alleviate the problem of hosting Life Context and Depth Contact on separate weekends, in some instances, we schedule back-to-back workshops (Parts 1 and 2) on a three-day holiday weekend.
                   </p>
 
                   <p>
-                    The structure of the sections and corresponding writing exercises in the workbook mirror the subjective process of perceptions and thoughts taking place inside you.
-                    For example, Progoff believed that the way to work with dreams and other forms of imagery is through an unfolding process, rather than analyzing or interpreting them, and this unfolding process is implemented in the exercises pertaining to dreams in the workbook.
+                    Prerequisite: None.
                   </p>
-                  <p>
-                    Therefore, the structure avoids the problems of unstructured journals that tend to diminish and eventually neutralize themselves, and result in analytical and circular forms of thinking.
-                    The structure also makes possible the Journal Feedback process which you will learn about shortly.
-                  </p>
-
-                  <h6>Active Instrument</h6>
-
-                  <p>
-                    The structure of the Intensive Journal workbook is an active instrument. Each exercise is used with specific procedures that seek to evoke the contents of a persons’s life without engaging in conscious thought processes.
-                     Drawing forth your life process stimulates additional inner perceptions and movements.
-                     Through the relation of the sections to each other, an inner dynamic is built moving in two directions: outward and inward.
-                  </p>
-
-                  <p>
-                    Progoff emphasizes the difference between the Intensive Journal method and diary writing:
-<blockquote>
-“Diary writing usually involves the unstructured, chronological recording of the events of a person’s life....the mere fact of continuously writing entries...is not sufficient in itself to bring about deep changes in a person’s life.
-To achieve a significant transformation in a personality, strong forces of energy must be generated.” </blockquote>
-                  </p>
-
-                  <h6>Tangible procedures</h6>
-
-                  <p>
-                    Working with our emotions and experiences may seem challenging and elusive; where do we begin?
-                     How do we get a handle on them? Progoff describes them to be amorphous, like smoke.
-                     Using the Intensive Journal procedures step-by-step helps you access the feelings and experiences that make you unique.
-
-                     <blockquote>
-                       “People become sensitive to the elusive threads of their inner lives when they have a definite way of working with them.”
-                      </blockquote>
-
-                  </p>
-
-                  <h6>Unifying Process</h6>
-
-                  <p>
-                    The workbook serves a unifying process; it is the link that holds your life process together, where your life experiences are recorded.
-                     Progoff calls it the “hinge in the process,” the tool by which you re-experience the inner continuity of your life. You can feel the presence of the principles of wholeness working within you.
-
-                  </p>
-                  <p>
-                    The workbook embodies the continuity of development through all of the moments of frustration, insights, exaltation and especially during periods of transition.
-                    You can be totally honest with the Intensive Journal workbook, your most accepting friend through your life journey.
-                  </p>
-
-                  <h6>Writing Process</h6>
-
-                  <p>
-                    The process of writing is necessary to make your feelings and experiences tangible for further development.
-                    As you read back what you have written, you may be surprised but there it is before you.
-                     The fact that you wrote the content can be significant; you own it - it is you.
-                  </p>
-                  <p>
-                    The process of writing in the Intensive Journal workbook stimulates movement within yourself.
-                    You are no longer carrying around these thoughts in your head.
-                     You have taken the next step by recording them for further development.
-                  </p>
-                  <p>
-                    You do not have to like to write or be a good writer.
-                    No one is reading what you write except you.
-                    You are not writing your life story but rather engaging in the unfolding process of working with your unique set of experiences and emotions that embody you.
-                  </p>
-
 
                 </div>
-
 
                 </section>
 
@@ -286,10 +246,7 @@ To achieve a significant transformation in a personality, strong forces of energ
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
