--- a/recent.html
+++ b/recent.html
@@ -72,6 +72,7 @@
                         <span class="navigation__link">General Workshops</span>
                         <ul class="navigation__item--nested">
                             <li><a href="workshop.html">About the Workshops</a></li>
+                            <li><a href="modules.html">Workshop Modules</a></li>
                             <li><a href="#">Schedules and Locations</a></li>
                             <li><a href="start.html">Start a Workshop</a></li>
                         </ul>
