--- a/faq.html
+++ b/faq.html
@@ -108,9 +108,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Miscellaneous</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">Support the Program</a></li>
-                            <li><a href="#">Refer Your Friends</a></li>
+                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="support.html">Support the Program</a></li>
+                            <li><a href="refer.html">Refer Your Friends</a></li>
                             <li><a href="#">Endorse the Method</a></li>
                             <li><a href="#">Join Mailing List</a></li>
                             <li><a href="#">Links</a></li>
@@ -146,7 +146,7 @@
                   </div>
 
                   </div>
-                  <div class="section-inside-picture meditation-picture">
+                  <div class="section-inside-picture faq-picture">
                   </div>
 
                 <div class="section-inside-content">
@@ -159,7 +159,7 @@
                      why should you attend the Intensive Journal workshops?
                      </h6>
                    </label>
-                   <input type="checkbox" name="one" id="question">
+                   <!-- <input type="checkbox" name="one" id="question"> -->
 <div class="hide">
   <div class="innerpara">
                   <p>
@@ -183,7 +183,7 @@
                   How do you prepare for a workshop?
                      </h6>
                    </label>
-                   <input type="checkbox" name="one" id="question2">
+                   <!-- <input type="checkbox" name="one" id="question2"> -->
 <div class="hide">
   <div class="innerpara">
                   <p>
@@ -208,7 +208,7 @@
                   Can I bring a laptop computer to the workshop?
                      </h6>
                    </label>
-                   <input type="checkbox" name="one" id="question3">
+                   <!-- <input type="checkbox" name="one" id="question3"> -->
 <div class="hide">
   <div class="innerpara">
                   <p>
@@ -245,7 +245,7 @@
                   Who attends Intensive Journal workshops?
                      </h6>
                    </label>
-                   <input type="checkbox" name="one" id="question4">
+                   <!-- <input type="checkbox" name="one" id="question4"> -->
 <div class="hide">
   <div class="innerpara">
                   <p>
@@ -276,7 +276,7 @@
                                     Where are Intensive Journal workshops offered?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question5">
+                                     <!-- <input type="checkbox" name="one" id="question5"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -301,7 +301,7 @@
                                     Who leads the workshops?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question6">
+                                     <!-- <input type="checkbox" name="one" id="question6"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -336,7 +336,7 @@
                                   Why does the price of a workshop vary by location?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question7">
+                                     <!-- <input type="checkbox" name="one" id="question7"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -352,7 +352,7 @@
                                   What happens at a workshop?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question8">
+                                     <!-- <input type="checkbox" name="one" id="question8"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -409,7 +409,7 @@
                                                     How can the Intensive Journal method help deal with a specific issue?
                                                          </h6>
                                                        </label>
-                                                       <input type="checkbox" name="one" id="question9">
+                                                       <!-- <input type="checkbox" name="one" id="question9"> -->
                                     <div class="hide">
                                       <div class="innerpara">
                                                       <p>
@@ -433,7 +433,7 @@
                                                     How do you proceed in the Intensive Journal method after a workshop?
                                                          </h6>
                                                        </label>
-                                                       <input type="checkbox" name="one" id="question10">
+                                                       <!-- <input type="checkbox" name="one" id="question10"> -->
                                     <div class="hide">
                                       <div class="innerpara">
                                                       <p>
