--- a/reasons.html
+++ b/reasons.html
@@ -108,9 +108,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Miscellaneous</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">Support the Program</a></li>
-                            <li><a href="#">Refer Your Friends</a></li>
+                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="support.html">Support the Program</a></li>
+                            <li><a href="refer.html">Refer Your Friends</a></li>
                             <li><a href="#">Endorse the Method</a></li>
                             <li><a href="#">Join Mailing List</a></li>
                             <li><a href="#">Links</a></li>
@@ -146,7 +146,7 @@
                   </div>
 
                   </div>
-                  <div class="section-inside-picture meditation-picture">
+                  <div class="section-inside-picture reasons-picture">
                   </div>
 
                 <div class="section-inside-content">
