--- a/faqs.html
+++ b/faqs.html
@@ -108,9 +108,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Miscellaneous</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">Support the Program</a></li>
-                            <li><a href="#">Refer Your Friends</a></li>
+                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="support.html">Support the Program</a></li>
+                            <li><a href="refer.html">Refer Your Friends</a></li>
                             <li><a href="#">Endorse the Method</a></li>
                             <li><a href="#">Join Mailing List</a></li>
                             <li><a href="#">Links</a></li>
@@ -167,7 +167,7 @@
                                     Why do people repeat a workshop module?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question01">
+                                     <!-- <input type="checkbox" name="one" id="question01"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -200,7 +200,7 @@
                                     What are the benefits of an extended workshop series?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question02">
+                                     <!-- <input type="checkbox" name="one" id="question02"> -->
                   <div class="hide">
                     <div class="innerpara">
                                     <p>
@@ -227,7 +227,7 @@
                                   What are the differences between workshop modules of various lengths?
                                        </h6>
                                      </label>
-                                     <input type="checkbox" name="one" id="question03">
+                                     <!-- <input type="checkbox" name="one" id="question03"> -->
                   <div class="hide">
                     <div class="innerpara">
 
