--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Miscellaneous</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">Support the Program</a></li>
-                            <li><a href="#">Refer Your Friends</a></li>
+                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="support.html">Support the Program</a></li>
+                            <li><a href="refer.html">Refer Your Friends</a></li>
                             <li><a href="#">Endorse the Method</a></li>
                             <li><a href="#">Join Mailing List</a></li>
                             <li><a href="#">Links</a></li>
