Learn more section

--- a/navigation.html
+++ b/navigation.html
@@ -76,14 +76,21 @@
                         </ul>
                     </li>
                     <li class="navigation__item">
-                        <span class="navigation__link">Information</span>
+                        <span class="navigation__link">Learn more</span>
                         <ul class="navigation__item--nested">
-                            <li><a href="#">Continuing Education</a></li>
+                            <li>
+                              <a href="cont-edu.html">Continuing Education</a>
+                                <ul class="navigation__item--nested--nested">
+                                  <li class="nested-list"><a href="therapy.html">Therapy</a></li>
+                                  <li class="nested-list"><a href="nursing.html">Nursing</a></li>
+                                </ul>
+
+                            </li>
                             <li><a href="#">Articles</a></li>
                             <li><a href="#">Life Histories</a></li>
                             <li><a href="#">Newsletters</a></li>
                             <li><a href="#">Boosk and Audio</a></li>
-                           
+
                         </ul>
                     </li>
                     <li class="navigation__item">
