Learn more add photos

--- a/nursing.html
+++ b/nursing.html
@@ -145,7 +145,7 @@
 
                       <li><a href="nursing.html">Learning Objectives</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="nursing-credits.html">Benefits</a></li>
+                      <li><a href="nursing-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
                       <li><a href="nursing-credits.html">Credits</a></li>
                       <span class="vert">&vert;</span>
